# NginxLivePusher

./: README.md  settings.gradle
app/: build.gradle
app/include/: x264.h
app/src/androidTest/java/com/jesen/nginxlivepusher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_channel.cpp  audio_channel.h  macro.h  native-lib.cpp  safe_queue.h  video_channel.cpp  video_channel.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/jesen/nginxlivepusher/: MainActivity.kt
app/src/main/java/com/jesen/nginxlivepusher/av/: AudioChannel.kt  CameraHelper.kt  LivePusher.kt  VideoChannel.kt
app/src/main/java/com/jesen/nginxlivepusher/util/: OLog.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jesen/nginxlivepusher/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
